Fix entry point to server.js and add full backend structure

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ DB_PORT=4000
 DB_USER=4VmPGSU3EFyEhLJ.root
 DB_PASSWORD=gWe9gfuhBBE5oH1u
 DB_NAME=d_nothi_db
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://dnothiwebapp.netlify.app
