--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "d-nothi-backend",
   "version": "1.0.0",
-  "description": "Backend for d-nothi app",
-  "main": "index.js",
+  "description": "Backend for D-Nothi app",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.3.4"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.4"
   },
-  "author": "",
-  "license": "ISC"
+  "engines": {
+    "node": "22.16.0"
+  }
 }
